--- a/Maui.IndustriesDictionary/Maui.IndustriesDictionary.csproj
+++ b/Maui.IndustriesDictionary/Maui.IndustriesDictionary.csproj
@@ -49,7 +49,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="5.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
+		<PackageReference Include="sqlite-net-pcl" Version="1.9.141-beta" />
 	</ItemGroup>
 
 </Project>
