Design Collection View Card

--- a/Maui.IndustriesDictionary/Maui.IndustriesDictionary.csproj
+++ b/Maui.IndustriesDictionary/Maui.IndustriesDictionary.csproj
@@ -53,11 +53,15 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Resources\Images\drop_down.png" />
 	  <None Remove="Resources\Images\English.svg" />
 	  <None Remove="Resources\Images\germany.svg" />
+	  <None Remove="Resources\Images\germany_card.png" />
 	  <None Remove="Resources\Images\iran.png" />
 	  <None Remove="Resources\Images\iran.svg" />
 	  <None Remove="Resources\Images\iran2.png" />
+	  <None Remove="Resources\Images\iran_card.png" />
+	  <None Remove="Resources\Images\united_card.png" />
 	</ItemGroup>
 
 	<ItemGroup>
